chapt5/chapt5_ws/log/build_2026-06-09_20-57-35/demo_python_tf/stdout_stderr.log
running egg_info
writing ../../build/demo_python_tf/demo_python_tf.egg-info/PKG-INFO
writing dependency_links to ../../build/demo_python_tf/demo_python_tf.egg-info/dependency_links.txt
writing entry points to ../../build/demo_python_tf/demo_python_tf.egg-info/entry_points.txt
writing requirements to ../../build/demo_python_tf/demo_python_tf.egg-info/requires.txt
writing top-level names to ../../build/demo_python_tf/demo_python_tf.egg-info/top_level.txt
reading manifest file '../../build/demo_python_tf/demo_python_tf.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/demo_python_tf/demo_python_tf.egg-info/SOURCES.txt'
running build
running build_py
copying demo_python_tf/tf_listener.py -> /home/hzh/ros2_learn/chapt5/chapt5_ws/build/demo_python_tf/build/lib/demo_python_tf
running install
running install_lib
creating /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf
copying /home/hzh/ros2_learn/chapt5/chapt5_ws/build/demo_python_tf/build/lib/demo_python_tf/static_tf_broadcaster.py -> /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf
copying /home/hzh/ros2_learn/chapt5/chapt5_ws/build/demo_python_tf/build/lib/demo_python_tf/dynamic_tf_broadcaster.py -> /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf
copying /home/hzh/ros2_learn/chapt5/chapt5_ws/build/demo_python_tf/build/lib/demo_python_tf/__init__.py -> /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf
copying /home/hzh/ros2_learn/chapt5/chapt5_ws/build/demo_python_tf/build/lib/demo_python_tf/tf_listener.py -> /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf
byte-compiling /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf/static_tf_broadcaster.py to static_tf_broadcaster.cpython-310.pyc
byte-compiling /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf/dynamic_tf_broadcaster.py to dynamic_tf_broadcaster.cpython-310.pyc
  File "/home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf/tf_listener.py", line 3
    from rclpy.time 
                    ^
SyntaxError: invalid syntax

byte-compiling /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf/tf_listener.py to tf_listener.cpython-310.pyc
running install_data
creating /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/share/ament_index
creating /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/share/ament_index/resource_index
creating /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/share/ament_index/resource_index/packages
copying resource/demo_python_tf -> /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/share/ament_index/resource_index/packages
copying package.xml -> /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/share/demo_python_tf
running install_egg_info
Copying ../../build/demo_python_tf/demo_python_tf.egg-info to /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf-0.0.0-py3.10.egg-info
running install_scripts
Installing dynamic_tf_broadcaster script to /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/demo_python_tf
Installing static_tf_broadcaster script to /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/demo_python_tf
Installing tf_listener script to /home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/demo_python_tf
writing list of installed files to '/home/hzh/ros2_learn/chapt5/chapt5_ws/build/demo_python_tf/install.log'
